2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor
  namespace: kube-system
  labels:
    k8s-app: cadvisor
