2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - poll
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        resources:
          limits:
            memory: "128M"
        ports:
        - containerPort: 80
      restartPolicy: Always
