2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - result
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        resources:
          limits:
            memory: "128M"
        ports:
        - containerPort: 80
      restartPolicy: Always
