2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: default
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - worker
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: worker
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: "256M"
      restartPolicy: Always
