2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
  labels:
    app: poll
spec:
  selector:
    app: poll
  ports:
  - port: 80
    protocol: TCP
