2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
