2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    protocol: TCP
