2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
  - port: 80
    protocol: TCP
