2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30021
      targetPort: 80
      name: http
    - protocol: TCP
      port: 8080
      nodePort: 30042
      targetPort: 8080
      name: admin
  type: NodePort
