2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll
  namespace: kube-system
  labels:
    app: poll
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poll
                port:
                  number: 80
