2021_2022/B-DOP-500-NCY-5-1-bernstein-samuel.palmer/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
  namespace: kube-system
  labels:
    app: result
spec:
  rules:
    - host: result.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
